==> gherlein/pico-cc1101/src/cc1101.c <==
#include "cc1101.h"
#include <hardware/spi.h>
#include <pico/time.h>
#include <stdint.h>
#define CC1101_STATE_IDLE 0
#define CC1101_STATE_RX 1
#define CC1101_STATE_TX 2
#define CC1101_STATE_FSTXON 3
#define CC1101_STATE_CALIBRATE 4
#define CC1101_STATE_SETTLING 5
#define CC1101_STATE_RX_OVERFLOW 6
#define CC1101_STATE_TX_UNDERFLOW 7

void writeReg(uint8_t regAddr, uint8_t value) {
    cc1101_Select();  // Select CC1101
    wait_Miso();      // Wait until MISO goes low
    // SPI.transfer(regAddr);  // Send register address
    // SPI.transfer(value);    // Send value
    // printf("writeReg: [0x%02X] [0x%02X]\n", regAddr, value);

    csb = spi_write_read_blocking(spi, &regAddr, &csb, 1);
    // printf("writeReg: [0x%02X] csb: [0x%02X]\n", regAddr, csb);
    cc1101_rdy = spi_write_read_blocking(spi, &value, &csb, 1);
    // printf("writeReg: [0x%02X] csb: [0x%02X]\n", value, csb);
    // parseCSB(csb, value);
    cc1101_Deselect();  // Deselect CC1101
}

void writeBurstReg(uint8_t regAddr, uint8_t *buffer, uint8_t len) {
    uint8_t addr, i;
    // printf("writeBurstReg: [0x%02X] len: %d\n", regAddr, len);

    addr = regAddr | WRITE_BURST;  // Enable burst transfer
    cc1101_Select();               // Select CC1101
    wait_Miso();                   // Wait until MISO goes low
    // SPI.transfer(addr);            // Send register address
    spi_write_read_blocking(spi, &regAddr, &csb, 1);

    for (i = 0; i < len; i++) {
        // SPI.transfer(buffer[i]);  // Send value
        spi_write_read_blocking(spi, &buffer[i], &csb, 1);
        // parseCSB(csb, buffer[i]);
    }
    //
    // int n = spi_write_blocking(spi, buffer, len);
    // printf("wrote %d bytes from buffer: %s\n", len, buffer);
    cc1101_Deselect();  // Deselect CC1101
}

void cmdStrobe(uint8_t cmd) {
    cc1101_Select();  // Select CC1101
    wait_Miso();      // Wait until MISO goes low
                      // SPI.transfer(cmd);  // Send strobe command
    int n = spi_write_read_blocking(spi, &cmd, &csb, 1);
    // printf("cmdStrobe: wrote [0x%02X] %d bytes\n", cmd, n);
    //   parseCSB(csb, cmd);
    cc1101_Deselect();  // Deselect CC1101
}

uint8_t readReg(uint8_t regAddr, uint8_t regType) {
    uint8_t addr;
    uint8_t val = 0xFF;

    addr = regAddr | regType | 0x80;
    // printf("addr: 0x%02X\n", addr);

    cc1101_Select();  // Select CC1101
    wait_Miso();      // Wait until MISO goes low
    // SPI.transfer(addr);        // Send register address
    // val = SPI.transfer(0x00);  // Read result
    int num_bytes_read = 0;

    int n = spi_write_read_blocking(spi, &addr, &csb, 1);
    // printf("readReg: wrote [0x%02X] (%d) bytes to reg [0x%0X]\n", addr, n, regAddr);
    // printf("csb: [0x%02X] \n", csb);
    spi_read_blocking(spi, 0x00, &val, 1);
    // printf("val: [0x%02X]\n", val);
    cc1101_Deselect();
    // printf("Waiting on MISO...");
    wait_Miso();
    // printf("done\n");
    return val;
}

void readBurstReg(uint8_t *buffer, uint8_t regAddr, uint8_t len) {
    uint8_t addr, i;

    addr = regAddr | READ_BURST;
    cc1101_Select();  // Select CC1101
    wait_Miso();      // Wait until MISO goes low
                      // SPI.transfer(addr);                                        // Send register address
    // for (i = 0; i < len; i++) buffer[i] = SPI.transfer(0x00);  // Read result uint8_t by uint8_t
    spi_write_blocking(spi, &addr, 1);
    for (i = 0; i < len; i++) {
        // buffer[i] = SPI.transfer(0x00);
        spi_read_blocking(spi, 0, &buffer[i], 1);
    }
    cc1101_Deselect();  // Deselect CC1101
}

void reset(void) {
    cc1101_Deselect();  // Deselect CC1101
    sleep_ms(250);
    cc1101_Select();  // Select CC1101
    sleep_ms(250);
    cc1101_Deselect();  // Deselect CC1101
    sleep_ms(250);
    cc1101_Select();  // Select CC1101

    wait_Miso();  // Wait until MISO goes low
                  // SPI.transfer(CC1101_SRES);  // Send reset command strobe
    cmdStrobe(CC1101_SRES);
    wait_Miso();        // Wait until MISO goes low
    cc1101_Deselect();  // Deselect CC1101

    uint8_t val = readStatusReg(CC1101_PARTNUM);
    printf("Partnum: [0x%02X]\n", val);

    setCCregs();  // Reconfigure CC1101

    setTxState();
}

bool sendData(CCPACKET packet) {
    uint8_t marcState;
    bool res = false;

    // Declare to be in Tx state. This will avoid receiving packets whilst
    // transmitting
    rfState = RFSTATE_TX;

    // Enter RX state
    // testing setRxState();

    printf("sendData\n");
    if (packet.length > 0) {
        printf("sendData: is %d bytes\n", packet.length);
    } else {
        printf("sendData: is 0 bytes\n");
    }

    int tries = 0;
    // Check that the RX state has been entered
    // while (tries++ < 1000 && ((marcState = readStatusReg(CC1101_MARCSTATE)) & 0x1F) != 0x0D) {
#if 0
    marcState = readStatusReg(CC1101_MARCSTATE);
    printf("sendData MarcState in RX: [0x%02X]\n", marcState);
    while (tries++ < 1000 && ((marcState & 0x1F) != 0x0D)) {
        if (marcState == 0x11)  // RX_OVERFLOW
            flushRxFifo();      // flush receive queue
    }
    if (tries >= 1000) {
        // TODO: MarcState sometimes never enters the expected state; this is a hack workaround.
        printf("MarcState never entered expected state\n");
        return false;
    }

    // sleep_us(500);

    if (packet.length > 0) {
        printf("sendData: sending %d bytes\n", packet.length);
        // Set data length at the first position of the TX FIFO
        writeReg(CC1101_TXFIFO, packet.length);
        // Write data into the TX FIFO
        writeBurstReg(CC1101_TXFIFO, packet.data, packet.length);

        // CCA enabled: will enter TX state only if the channel is clear
        setTxState();
    }
#endif

    setTxState();
    for (int x = 0; x < packet.length; x++) {
        printf("%02X ", packet.data[x]);
    }
    printf("\n");
    // Check that TX state is being entered (state = RXTX_SETTLING)
    marcState = readStatusReg(CC1101_MARCSTATE);
    printf("sendData MarcState in TX: [0x%02X]\n", marcState);

    marcState = marcState & 0x1F;
    if ((marcState != 0x13) && (marcState != 0x14) && (marcState != 0x15)) {
        setIdleState();  // Enter IDLE state
        printf("--- flushing the FIFO\n");
        flushTxFifo();  // Flush Tx FIFO
        setRxState();   // Back to RX state

        // Declare to be in Rx state
        rfState = RFSTATE_RX;
        printf("--- entering RX state, returning false\n");
        return false;
    }
    // printf("CS off\n");
    // cc1101_Deselect();
    //  Wait for the sync word to be transmitted
    printf("waiting for sync word transmit...\n");
    // wait_GDO0_high();
    while (gpio_get(17) != 1) {
    }
    // Wait until the end of the packet transmission
    while (gpio_get(17) != 0) {
    }
    // Check that the TX FIFO is empty
    printf("checing if the TX FIFO is empty\n");
    if ((readStatusReg(CC1101_TXBYTES) & 0x7F) == 0) res = true;

    printf("sendData: entereting IDLE state\n");
    setIdleState();  // Enter IDLE state
    flushTxFifo();   // Flush Tx FIFO

    // Enter back into RX state
    printf("sendData: entereting RX state\n");
    setRxState();

    // Declare to be in Rx state
    rfState = RFSTATE_RX;

    return res;
}
